# kfk-nixos-vm

./: README.md  flake.nix
kfk-reader/: CHANGELOG.md  MyLib.hs  hie.yaml  kfk-reader.cabal
kfk-sender/: CHANGELOG.md  MyLib.hs  hie.yaml  kfk-sender.cabal
