cabal-version:       3.4
name:                kfk-reader
version:             0.1.0.0
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     MyLib, Main
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010

executable kfk-reader
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010
