cabal-version:       3.0
name:                kfk-reader
version:             0.1.0.0
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     MyLib, Main
  build-depends:       base
                     , Cabal
                     , hw-kafka-client
  default-language:    Haskell2010

executable kfk-reader
  main-is:             Main.hs
  build-depends:       base
                     , kfk-reader
                     , Cabal
                     , hw-kafka-client
  default-language:    Haskell2010
